# wissensdatenbank

./: .gitignore  404.html  Makefile  README.md  USE.md  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml
correlation/: index.html
data-engineering/column_manipulations/: index.html
data-engineering/data_formats/: index.html
data-engineering/data_types/: index.html
data-engineering/drop_duplicates/: index.html
data-engineering/fillna/: index.html
data-engineering/imputation/: index.html
data-engineering/introduction/: index.html
data-engineering/joins/: index.html
data-engineering/outliers/: index.html
data-engineering/pivot_melt/: index.html
data-engineering/resampling/: index.html
data-engineering/time_indexes/: index.html
data-protection/data_protection/: index.html
docs/: correlation.md  material_downloads.md  mini_challenge.md  mini_challenge_datensatzbeispiele.md  python_installation.md  semesteruebersicht.md  visualization.md
docs/data-engineering/: column_manipulations.md  data_formats.md  data_types.md  drop_duplicates.md  fillna.md  imputation.md  introduction.md  joins.md  outliers.md  pivot_melt.md  resampling.md  time_indexes.md
docs/data-protection/: data_protection.md
docs/machine-learning/: basics.md  linear_regression.md  model_evaluation.md  (+2 more)
material_downloads/: index.html
mini_challenge/: index.html
mini_challenge_datensatzbeispiele/: index.html
python_installation/: index.html
search/: search_index.json
semesteruebersicht/: index.html
visualization/: index.html
(+12 files in other folders)
