[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wissensdatenbank"
version = "0.0.1"
authors = [
  { name = "Gabriel, Torres Gamez" },
  { name = "Florin Marius, Barbisch" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdown-callouts>=0.4.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
]
